@@ -834,7 +834,7 @@ FUNTAB R_FunTab[] = {
     {"unz", do_unz, 0, 11, 3, {PP_FUNCALL, PREC_FN, 0}},
     {"seek", do_seek, 0, 11, 4, {PP_FUNCALL, PREC_FN, 0}},
     {"truncate", do_truncate, 0, 11, 1, {PP_FUNCALL, PREC_FN, 0}},
-    {"pushBack", do_pushback, 0, 111, 3, {PP_FUNCALL, PREC_FN, 0}},
+    {"pushBack", do_pushback, 0, 111, 4, {PP_FUNCALL, PREC_FN, 0}},
     {"clearPushBack", do_clearpushback, 0, 111, 1, {PP_FUNCALL, PREC_FN, 0}},
     {"pushBackLength", do_pushbacklength, 0, 11, 1, {PP_FUNCALL, PREC_FN, 0}},
     {"rawConnection", do_rawconnection, 0, 11, 3, {PP_FUNCALL, PREC_FN, 0}},
